# ppdmod

./: .gitignore  CMakeLists.txt  README.md  analytical_model_fitting.py  component.py  components.py  custom_components.py  data.py  fft.py  fitting_output.txt  mcmc.py  model.py  model_fitting.py  modelling.txt  notes.md  options.py  parameter.py  plot.py  pyproject.toml  run_ppdmod.py  setup.cfg  setup.py  utils.py
.github/workflows/: ci.yml
c_src/: _spectral.c  spectral.c  spectral.h
cython_src/: spectral.pyx
data/: standard_parameters.toml
data/aspro/: Iring.fits  Iring_inc_rot.fits  Iring_rin8_inc063_pa68_medium.fits  Ring_rin15_width025_cinc05_pa285_uts.fits  Ring_rin15_width025_cinc063_pa68_c1-018_s1098_uts.fits  Ring_rin15_width025_cinc063_pa68_rho11_theta190_uts.fits  Ring_rin15_width025_cinc1_pa0_uts.fits  Ring_rin3_width025_cinc1_pa0_uts.fits  bin_sep5_pa-90_extended.fits  bin_sep5_pa0_extended.fits  bin_sep5_pa90_extended.fits  cm_AsymGreyBody_inc05_pa33_c0_s1_extended.fits  cm_AsymTempGrad_rin15_rout2_inc05_pa0_q05_intemp1500_p05_insigma1e-4_cw04_r01_c0_s0_large.fits  cm_AsymTempGrad_rin15_rout2_inc05_pa33_q05_intemp1500_p05_insigma1e-4_cw04_r01_c05_s05_large.fits  cm_AsymTempGrad_rin15_rout2_inc05_pa33_q05_intemp1500_p05_insigma1e-4_cw04_r01_c0_s0_large.fits  cm_AsymTempGrad_rin15_rout2_inc1_pa0_q05_intemp1500_p05_insigma1e-4_cw04_r01_c0_s0_large.fits  cm_GaussLor_hlr4_inc064_pa68_UTs.fits  cm_Gauss_hlr4_inc063_pa68_medium.fits  cm_Gaussian_hrl_4_inc063_pa68_medium.fits  cm_Iring_rin2_inc05_pa33_c05_s1_extended.fits  cm_Iring_rin2_inc05_pa33_c1_s0_extended.fits  cm_Iring_rin2_inc05_pa33_c1_s1_extended.fits  cm_Iring_rin2_inc1_pa0_c0_s0_extended.fits  cm_Star_AsymTempGrad_rin15_rout2_inc05_pa33_q05_intemp1500_p05_insigma1e-4_cw04_r01_c05_s05_large.fits  cm_ring_rin2_inc05_pa0_c0_s0_w05_extended.fits  cm_ring_rin2_inc05_pa33_c05_s05_w05_extended.fits  cm_ring_rin2_inc05_pa33_c0_s0_w05_extended.fits  cm_ring_rin2_inc1_pa0_c0_s0_w05_extended.fits  cm_ring_rin2_inc1_pa0_c0_s0_w1_extended.fits  gaussian_hlr4_inc063_pa68_UTs.fits  model_pt_Iring_inc.fits  model_pt_ring_inc.fits  ring_inc_rot.fits  test.fits  ud.fits  ud_inc.fits
data/matisse/: hd_142666_2022-04-23T03_05_25:2022-04-23T02_28_06_AQUARIUS_FINAL_TARGET_INT_flux_avg_vis.fits  hd_142666_2022-04-23T03_05_25:2022-04-23T02_28_06_HAWAII-2RG_FINAL_TARGET_INT_flux_avg.fits
data/pionier/HD150193/: 2013-06-16_SCI_HD150193_oiDataCalib.fits  PIONIER.2013-06-10T05 23 17_oidataCalibrated.fits  PIONIER.2013-07-04T05 43 47_oidataCalibrated.fits
data/resolution_grids/: nband_low.npy
data/tests/: HD_142666_2019-03-24T09_01_46_L_TARGET_FINALCAL_INT.fits  HD_142666_2019-03-24T09_01_46_N_TARGET_FINALCAL_INT.fits  HD_142666_2019-05-14T05_28_03_N_TARGET_FINALCAL_INT.fits  HD_142666_sws.txt  HD_142666_timmi2.txt  test.fits
data/uv_coords/: large_uvcoords.npy  medium_uvcoords.npy  small_uv123coords.npy  small_uvcoords.npy
examples/: disc_fit.py  disk_fit.py  hd142527.py  hd142666.py  interferometric_fit.py  matisse_lor_gauss.py  model_fitting.py  nband_fit.py  ring_fit.py  sed_fit.py  simple_fitting.py
include/: spectral.h
ppdmod/: CMakeLists.txt  _spectral.c  analysis.py  base.py  basic_components.py  component.py  components.py  custom_components.py  data.py  fft.py  fitting.py  fluxcal.py  main.cpp  mcmc.py  model.py  options.py  parameter.py  plot.py  spectral.c  spectral.cpp  spectral.h  spectral.pyx  synthetic.py  utils.py
ppdmod/c_src/: spectral.c  spectral.h
ppdmod/config/: standard_parameters.toml
ppdmod/functionality/: baseClasses.py  dynesty.py  fitting_utils.py  fourier.py  genetic_algorithm.py  mcmc.py  model_save.py  nested.py  plotting_utils.py  readout.py  synthetic.py  utilities.py  utils.py
ppdmod/models/: __init__.py  binary.py  compound_model.py  gauss2d.py  inclined_disk.py  optically_thin_sphere.py  ring.py  uniform_disk.py
results_model_nsteps2500_nwalkers100/: best_fit_params.npy
src/: spectral.cpp  spectral_wrapper.cpp
src/ppdmod/: run_ppdmod.py
src/ppdmodler/: main.py
tests/: compare_aspro_vs_ppdmod.py  create_mock_data.py  make_image.py  make_images.py  make_ring.py  read_data.py  ring_modulated.py  test_basic_components.py  test_combined_model.py  test_comparisons.py  test_component.py  test_custom_components.py  test_data.py  test_data_prep.py  test_fft.py  test_fitting.py  test_fitting_utils.py  test_fourier.py  test_hd163296.py  test_mcmc.py  test_model.py  test_model_base.py  test_model_components.py  test_parameter.py  test_plots.py  test_readout.py  test_spectral.py  test_synthetic.py  test_utils.py
tests/data/: fits  flux  grf  high_wavelength_solution.npy  opacities  qval
tests/fitting/: gravity_gauss.py  gravity_lor_gauss.py  gravity_ring.py  make_images.py  make_test_images.py  matisse_lor_gauss.py  mod_ring.py  pionier_fscma.py  pionier_lor_gauss.py  pionier_ring.py  pionier_ring_ellipsoid.py  pt_Iring.py  pt_Iring_inc.py  pt_Iring_inc_rot.py  pt_ring_inc_rot.py  pt_ring_inc_rot_xy.py  test_images.py  test_make_image.py
tests/test_fits/: pt_ring_inc_rot_xy.py  ring_modulated.py
(+208 files in other folders)
