[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppdmod"
dynamic = ["version"]
description = "A package for modelling and model-fitting protoplanetary disks"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
	{name = "Marten Scheuck", email = "martenscheuck@gmail.com"}
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: Pytest",
    "Framework :: Sphinx",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    'importlib-metadata; python_version<"3.8"',
    "pip >=22.2.2",
    "astropy >=5.1",
    "corner >=2.2.2",
    "emcee >=3.1.2",
    "matplotlib >=3.5.3",
    "numpy >=1.23.2",
    "openpyxl >= 3.1.2",
    "pandas >= 2.1.0",
    "scipy >=1.9.1",
    "dynesty >=2.1.3",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "pytest >= 7.2.1",
  "pytest-cov >= 4.0.0",
  "sphinx == 7.0.1",
  "sphinx-autobuild == 2021.3.14",
  "sphinx-autodoc-typehints == 1.23",
  "pydata-sphinx-theme==0.13.3",
  "numpydoc==1.5.0",
]

[tool.setuptools.dynamic]
version = {attr = "ppdmod.__version__"}

[tool.setuptools.packages.find]
include = ["ppdmod*"]

[project.urls]
repository = "https://github.com/MBSck/ppdmod"

