[metadata]
name = ppdmod
version = 0.0.1
author = Marten B. Scheuck
author_email = martenscheuck@gmail.com
description = A package for model-fitting protoplanetary disks
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/MBSck/ppdmod
project_urls =
    Source Code = https://github.com/MBSck/ppdmod/tree/master/ppdmod
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"

[options.packages.find]
where = src

[options.extras_require]
docs =
  sphinx
  sphinx-automodapi
  numpydoc
test =
  pytest
  pytest-doctestplus
  flake8
  codecov
  pytest-cov
